--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,3 @@
 awsProfile=web-uploader
-awsTarget=s3://test.jdata.pl/notes/
-notesUrl=http://test.jdata.pl/notes/
+awsTarget=s3://jdata.pl/notes/
+notesUrl=http://jdata.pl/notes/
