--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,31 @@ if(new File('custom.gradle.properties').exists()){
     apply from: 'custom.gradle.properties'
 }
 
+asciidoctor {
+    sources {
+        include '*.adoc'
+    }
+    resources {
+        from(sourceDir) {
+            include 'images/*', 'stylesheets/*', 'tocbot-3.0.2/*'
+        }
+    }
+    logDocuments = true
+    backends = ["html5"]
+
+    options doctype: 'book', eruby: 'erubis'
+    attributes  'icons': 'font',
+            'idprefix': '',
+            'idseparator': '-',
+            docinfo: '',
+            sectanchors: '',
+            sectnums: '',
+            'source-highlighter': 'coderay@', // TODO switch to 'rouge' once supported by the html5 backend
+            stylesdir: 'stylesheets/',
+            stylesheet: 'main.css',
+            'spring-version': project.version
+}
+
 build.dependsOn asciidoctor
 
 task upload() {
