--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,8 @@
+# AWS S3 upload configuration
+# used by command: gradle upload
+# You must have installed aws cli and a cli profile configured with specified name
 awsProfile=web-uploader
 awsTarget=s3://notes.jdata.pl/
+
+# used by command: gradle openRemote
 notesUrl=http://notes.jdata.pl
